# aoc-agent

./: .gitignore  404.html  LOG.md  README.md  index.html  pyproject.toml  report.html
.junie/: 00-initial-specification.md  guidelines.md
.junie/memory/: errors.md  feedback.md  tasks.md
2018/day_15/: history.json  index.html  input.txt  solve_part1_1764542392353.py  solve_part2_1764542435100.py  visualize_1764542485246.py
2018/day_15/2025-11-30_23-38-51_2018_15_python_gemini-3-pro-preview_3a9045cf/: index.html
2018/day_15/gemini-3-pro-preview/: index.html
2024/day_01/2025-11-30_00-33-00_2024_1_python_gemini-2.5-flash_9d340b93/: index.html
2024/day_01/2025-11-30_00-59-10_2024_1_python_gemini-2.5-flash_55899f74/: index.html
2024/day_01/gemini-2_5-flash/: index.html
2024/day_01/gemini-2_5-flash_2/: index.html
2024/day_08/2025-11-30_02-28-25_2024_8_python_gemini-3-pro-preview_598d2893/: index.html
2024/day_08/2025-11-30_02-30-59_2024_8_kotlin_gemini-3-pro-preview_10498a3b/: index.html
2024/day_08/gemini-3-pro-preview/: index.html
2024/day_08/gemini-3-pro-preview_2/: index.html
2024/day_09/2025-11-30_01-46-55_2024_9_kotlin_gemini-3-pro-preview_8c2d02b0/: index.html
2024/day_09/2025-11-30_02-17-42_2024_9_python_gemini-3-pro-preview_8ca0140e/: index.html
2024/day_09/gemini-3-pro-preview/: index.html
2024/day_09/gemini-3-pro-preview_2/: index.html
2024/day_10/gemini-3-pro-preview/: index.html
javascripts/: mathjax.js
search/: search_index.json
src/aoc_agent/: __init__.py  cli.py
tools/: README.md  generate_site.py  publish_site.py
(+115 files in other folders)
